Got profile "prod" to work!! min-files are used now!! :D